--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
 
     <script src="js/convertPhraseToVariableName.js"></script>
-    <script src="node_modules/copy-js/dist/copy.min.js"></script>
+    <script src="node_modules\copy-js\dist\copy.min.js"></script>
     <script>
         let app = new Vue({
             el: "#app",
