--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
     </div>
 
-    <script src="js/convertPhraseToVariableName.js"></script>
+    <script src="js\convertPhraseToVariableName.js"></script>
     <script src="node_modules\copy-js\dist\copy.min.js"></script>
     <script>
         let app = new Vue({
