--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         let app = new Vue({
             el: "#app",
             data: {
-                // фраза/словосочетание в форме для ввода
+                // фраза или словосочетание в форме для ввода
                 phrase: "",
                 // всплывающие подсказки
                 tooltips: {
