--- a/index.html
+++ b/index.html
@@ -12,21 +12,38 @@
 
 <body>
     <div class="app" id="app">
+        <!-- Заголовок -->
         <h1 class="app__title">Создать имя переменной (lowerCamelCase).</h1>
+        <!-- Преобразование в латиницу -->
+        <transition name="convertation">
+            <div class="app__convertation" v-if="showConvertation">
+                <div class="convertation-condition">
+                    <div class="convertation-condition__input">
+                        <input type="checkbox" name="convertLatin" id="convertLatin" v-model="convertLatin">
+                    </div>
+                    <div class="convertation-condition__label">
+                        <label for="convertLatin">Преобразовать в латиницу (только для русских букв)</label>
+                    </div>
+                </div>
+            </div>
+        </transition>
+        <!-- форма ввода -->
         <div class="app__input">
             <div class="input">
                 <div class="input__denomination">
-                    <label class="phrase-denomination" for="field">Словосочетание: </label>
+                    <label class="phrase-denomination" for="field"
+                        v-on:click="showConvertation = !showConvertation" v-bind:title="tooltips.convertLatinMessage">Словосочетание: </label>
                 </div>
                 <div class="input__field">
                     <input class="phrase-input" type="text" name="field" id="field" v-model="phrase">
                 </div>
                 <div class="input__delete">
-                    <button class="phrase-drop" type="button" v-if="phrase.length !== 0" v-bind:title="tooltips.deleteMessage"
-                        v-on:click="dropFieldValue"></button>
+                    <button class="phrase-drop" type="button" v-if="phrase.length !== 0"
+                        v-bind:title="tooltips.deleteMessage" v-on:click="dropFieldValue"></button>
                 </div>
             </div>
         </div>
+        <!-- блок вывода готового словосочетания -->
         <div class="app__variable-camelcase" v-if="phrase.length !== 0">
             <div class="variable-camelcase">
                 <div class="variable-camelcase__denomination">Имя переменной:</div>
@@ -34,36 +51,38 @@
                     <span class="variable-camelcase__value"> {{ convertToVariableName }} </span>
                 </div>
                 <div class="variable-camelcase__copy">
-                    <button class="copy" type="button" v-bind:title="tooltips.copyMessage" v-on:click="copyValue"></button>
+                    <button class="copy" type="button" v-bind:title="tooltips.copyMessage"
+                        v-on:click="copyValue"></button>
                 </div>
             </div>
         </div>
     </div>
 
-    <script src="js/convertPhraseToVariableName.js"></script>
+    <script src="js/convertPhraseToVariableName.js"></script> 
     <script src="js/convertToLatin.js"></script>
     <script src="node_modules/copy-js/dist/copy.js"></script>
-    <script>
-        const transliterate = require('node_modules/@sindresorhus/transliterate');
-    </script>
     <script>
         let app = new Vue({
             el: "#app",
             data: {
                 // фраза или словосочетание в форме для ввода
                 phrase: "",
+                // Разрешение на конвертацию в латиницу
+                showConvertation: false,
+                convertLatin: true,
                 // всплывающие подсказки
                 tooltips: {
                     deleteMessage: "Очистить",
                     copyMessage: "Копировать",
+                    convertLatinMessage: `Опция конвертации в латиницу`,
                 },
                 // индикатор, отображающий копирование
                 isCopied: false,
             },
             computed: {
                 convertToVariableName() {
-                    let latinPhrase = convertToLatin(this.phrase);
-                    return convertPhraseToVariableName(latinPhrase);
+                    return convertPhraseToVariableName(this.convertLatin ? convertToLatin(this.phrase) : this
+                        .phrase);
                 },
             },
             methods: {
